2009-07-17  Sebastien Pouliot  <sebastien@ximian.com>

	* misc/DefaultValues.cs: Decorate some Glyphs tests with 
	[MoonlightBug] since they were not executed preivously because no
	other partial GlyphsTest type existed with a [TestClass] attribute
	* System.Windows.Documents/GlyphsTest.cs: New. Parser tests for
	Glyphs that use backslashes (throwing XamlParseException)

2009-07-16  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Controls/SaveFileDialogTest.cs: Update for SL3
	final API.

2009-07-16  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Add extra
	  tests to more clearly define when the IsEnabled state of a
	  control propagates to its children.

2009-07-15  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Threading/TimerTest.cs: New. Shows the bad (sync) 
	behavior of Moonlight
	* System.Threading/ThreadTest.cs: Ignore two test cases that
	(should) kills the harness when executed from the bots (like it
	happens when executed on Windows) since there's a OnError
	event registred in javascript (inside test.html)
	* System.Windows.Threading/CrossThreadAccessTest.cs: Make the
	test cases [Asynchronous] since the sync-based Timer tests 
	don't work (see new unit tests). As such Moonlight did not 
	execute the delegates (so the tests were green anyway / empty)
	but it causes problems within the runtime (GetHost returns null).

2009-07-14  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Split up the new
	  Loaded tests into two parts, one checking the Loaded event
	  is async and one checking that it is actually fired.

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTest.cs: If the focused
	  element is removed from the visual tree, it should lose
	  focus.

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTest.cs: A control does not
	  have to be loaded to be focusable, the visual tree it's